--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Maryam Ashfaq Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="Stylesheet.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
     <div id="progressbar1"></div>
@@ -195,27 +197,27 @@ I am also committed to giving back to my community and hope to use my skills and
          <div class="contact-info mt-4 text-center">
                         <div class="contact-item">
                             <p class="contact-left">
-                                <img src="/images/email.png" alt="Email Icon" width="20" height="20"> 
+                                <i class="fa-solid fa-envelope"></i>
                                 <a href="mailto:maryamashfaq1828@gmail.com">maryamashfaq1828@gmail.com</a>
                             </p>
                             <p class="contact-right">
-                                <img src="/images/phone.png" alt="Phone Icon" width="20" height="20"> 
-                                +92 324 5250505
+                                <i class="fa-solid fa-phone"> </i>
+                                 +92 324 5250505
                             </p>
                         </div>
                         <div class="contact-item">
                             <p class="contact-left">
-                                <img src="/images/linkedin logo.png" alt="LinkedIn Icon" width="20" height="20"> 
+                                <i class="fa-brands fa-linkedin"></i>
                                 <a href="https://linkedin.com/in/maryamashfaq5">linkedin.com/in/maryamashfaq5</a>
                             </p>
                             <p class="contact-right">
-                                <img src="/images/location.png" alt="Location Icon" width="20" height="20"> 
-                                Islamabad, Pakistan
+                                <i class="fa-solid fa-location-dot"> </i>
+                                 Islamabad, Pakistan
                             </p>
                         </div>
                         <div class="contact-item">
                             <p class="contact-left">
-                                <img src="/images/github logo.jpeg" alt="GitHub Icon" width="20" height="20"> 
+                                <i class="fa-brands fa-github"></i>
                                 <a href="https://github.com/maryam037">github.com/maryam037</a>
                             </p>
                             <p class="contact-right"></p>
