--- a/index.html
+++ b/index.html
@@ -46,21 +46,24 @@
         <div class="row h-100 align-items-center">
           <div class="col-12 text-center">
             <h3 class="intro-text">
-              Hi! My name is
+              Hi! My name is  
               <div class="wavy">
-                <span style="--i: 1">M</span>
+                <span style="--i: 1">  M</span>
                 <span style="--i: 2">A</span>
                 <span style="--i: 3">R</span>
                 <span style="--i: 4">Y</span>
                 <span style="--i: 5">A</span>
                 <span style="--i: 6">M</span>
                 <span style="--i: 7"> </span>
-                <span style="--i: 8">A</span>
-                <span style="--i: 9">S</span>
-                <span style="--i: 10">H</span>
-                <span style="--i: 11">F</span>
-                <span style="--i: 12">A</span>
-                <span style="--i: 13">Q</span>
+                <span style="--i: 8"> </span>
+                <span style="--i: 9"> </span>
+                <span style="--i: 10">A</span>
+                <span style="--i: 11">S</span>
+                <span style="--i: 12">H</span>
+                <span style="--i: 13">F</span>
+                <span style="--i: 14">A</span>
+                <span style="--i: 15">Q</span>
+                
               </div>
             </h3>
             <br /><br />
@@ -140,7 +143,7 @@
                         <p class="project-description">
                             AI Powered Flutter Mobile Application For Detection And Management Of Litter Dumps using Computer Vision.
                         </p>
-                        <a href="https://github.com/yourusername/littergo" class="btn-github" target="_blank">View on GitHub</a>
+                        <a href="https://github.com/yourusername/littergo" class="btn btn-primary btn-github" target="_blank">View on GitHub</a>
 
                     </div>
                 </div>
@@ -151,7 +154,7 @@
                         <p class="project-description">
                             Employed content-based filtering through feature extraction and cosine similarity to rank and suggest recipes based on user preferences.
                         </p>
-                        <a href="https://github.com/yourusername/recipe-recommendation" class="btn-github" target="_blank">View on GitHub</a>
+                        <a href="https://github.com/yourusername/recipe-recommendation" class="btn btn-primary btn-github" target="_blank">View on GitHub</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -161,7 +164,7 @@
                         <p class="project-description">
                             Created a video calling mobile app using agora.io's video SDK classes, implemented in Java.
                         </p>
-                        <a href="https://github.com/yourusername/videocalling-app" class="btn-github" target="_blank">View on GitHub</a>
+                        <a href="https://github.com/yourusername/videocalling-app" class="btn btn-primary btn-github" target="_blank">View on GitHub</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -171,7 +174,7 @@
                         <p class="project-description">
                             Analysis on WHO suicide statistics, followed by training a model using Random Forest Classifier after feature selection.
                         </p>
-                        <a href="https://github.com/yourusername/suicide-rate-prediction" class="btn-github" target="_blank">View on GitHub</a>
+                        <a href="https://github.com/yourusername/suicide-rate-prediction" class="btn btn-primary btn-github" target="_blank">View on GitHub</a>
                     </div>
                 </div>
                 <div class="project-card">
@@ -181,7 +184,8 @@
                         <p class="project-description">
                             Developed a visually appealing and responsive e-commerce website for an online clothing store using HTML, CSS, and JavaScript.
                         </p>
-                        <a href="https://github.com/yourusername/ecommerce-website" class="btn-github" target="_blank">View on GitHub</a>
+                        
+                        <a href="https://github.com/yourusername/ecommerce-website" class="btn btn-primary btn-github" target="_blank">View on GitHub</a>
                     </div>
                 </div>
                 <div class="nav-buttons">
@@ -251,44 +255,38 @@
       </div>
     </section>
 
-    <footer class="py-4">
-      <div class="contact-info mt-4 text-center">
-        <div class="contact-item">
-          <p class="contact-left">
-            <i class="fa-solid fa-envelope"></i>
-            <a href="mailto:maryamashfaq1828@gmail.com"
-              >maryamashfaq1828@gmail.com</a
-            >
-          </p>
-          <p class="contact-right">
-            <i class="fa-solid fa-phone"> </i>
-            +92 324 5250505
-          </p>
-        </div>
-        <div class="contact-item">
-          <p class="contact-left">
-            <i class="fa-brands fa-linkedin"></i>
-            <a href="https://linkedin.com/in/maryamashfaq5"
-              >linkedin.com/in/maryamashfaq5</a
-            >
-          </p>
-          <p class="contact-right">
-            <i class="fa-solid fa-location-dot"> </i>
-            Islamabad, Pakistan
-          </p>
-        </div>
-        <div class="contact-item">
-          <p class="contact-left">
-            <i class="fa-brands fa-github"></i>
-            <a href="https://github.com/maryam037">github.com/maryam037</a>
-          </p>
-          <p class="contact-right"></p>
-        </div>
+<footer class="py-4">
+  <div class="container mt-4">
+    <div class="row text-center">
+      <div class="col-md-6 mb-3">
+        <i class="fa-solid fa-envelope"></i>
+        <a href="mailto:maryamashfaq1828@gmail.com">maryamashfaq1828@gmail.com</a>
       </div>
-      <div class="container-fluid text-center">
-        <small>&copy; 2024 Maryam Ashfaq. All Rights Reserved.</small>
+      <div class="col-md-6 mb-3">
+        <i class="fa-solid fa-phone"></i> +92 324 5250505
       </div>
-    </footer>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-6 mb-3">
+        <i class="fa-brands fa-linkedin"></i>
+        <a href="https://linkedin.com/in/maryamashfaq5">linkedin.com/in/maryamashfaq5</a>
+      </div>
+      <div class="col-md-6 mb-3">
+        <i class="fa-solid fa-location-dot"></i> Islamabad, Pakistan
+      </div>
+    </div>
+    <div class="row text-center">
+      <div class="col-md-12 mb-3">
+        <i class="fa-brands fa-github"></i>
+        <a href="https://github.com/maryam037">github.com/maryam037</a>
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid text-center">
+    <small>&copy; 2024 Maryam Ashfaq. All Rights Reserved.</small>
+  </div>
+</footer>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
