--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="row justify-content-center mb-4"> 
             <div class="col-md-8 text-center">
                 <h1 class="section-title text-center">My Resume</h1>
-              <p>Download my CV and learn more about my experience.</p>
+              <p>Download my resume and learn more about my experience.</p>
             </div>
           </div>
     
@@ -91,7 +91,7 @@
                 <div class="pic">
                   <img src="images/mypic2.jpg" alt="Maryam" />
                   <h2>Maryam Ashfaq <br /><span>Software Developer</span></h2>
-                  <a href="CV/Maryam_Ashfaq_CV.pdf" download>Download CV</a>
+                  <a href="CV/Maryam_Ashfaq_CV.pdf" download>Download Pdf</a>
                 </div>
               </div>
             </div>
@@ -134,7 +134,7 @@
     
     <section id="projects" class="py-5">
         <div class="container">
-            <h2 class="section-title text-center">Projects</h2>
+            <h2 class="section-title text-center">My Projects</h2>
             <div class="project-slider">
                 <div class="project-card active">
                     <img src="images/littergo.png" alt="LitterGo" class="project-image">
@@ -276,7 +276,7 @@
       </div>
     </div>
     <div class="row text-center">
-      <div class="col-md-12 mb-3">
+      <div class="col-md-6 mb-3">
         <i class="fa-brands fa-github"></i>
         <a href="https://github.com/maryam037">github.com/maryam037</a>
       </div>
