--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               <div class="col-md-6">
                 <div class="embed-responsive embed-responsive-16by9 mb-4">
                   <video class="embed-responsive-item" controls muted autoplay>
-                    <source src="videos/Shoes (1).mp4" type="video/mp4" />
+                    <source src="videos/Shoess.mp4" type="video/mp4" />
                     Your browser does not support the video tag.
                   </video>
                 </div>
