--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         <div class="row align-items-center my-5">
           <div class="col-md-5 d-flex justify-content-center mb-4 mb-md-0">
             <img
-              src="/images/MA logo2.jpg"
+              src="/images/MAlogo1.png"
               alt="Contact Image"
               class="img-fluid rounded shadow contact-image"
               style="transition: transform 0.3s"
