--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
         <div class="row align-items-center my-5">
           <div class="col-md-5 d-flex justify-content-center mb-4 mb-md-0">
             <img
-              src="/images/MAlogo1.png"
-              alt="Contact Image"
-              class="img-fluid rounded shadow contact-image"
-              style="transition: transform 0.3s"
-            />
+    src="images/MAlogo1.png"
+    alt="Contact Image"
+    class="img-fluid rounded shadow contact-image"
+    style="transition: transform 0.3s"
+/>
           </div>
           <div class="col-md-7">
             <form class="p-4 neon-border rounded shadow">
