--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="box text-center">
               <div class="pic">
                 <img src="images/mypic2.jpg" alt="Maryam" />
-                <h2>Maryam Ashfaq <br /><span>Software Developer</span></h2>
+                <h2>Maryam Ashfaq <br /><span>Full Stack Developer</span></h2>
                
               </div>
             </div>
