--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
             <h1 class="section-title text-center">About Me</h1>
 
             <p class="text-justify">
-              Hi there! I’m Maryam, a 23 year old IT graduate, who developed immense love for technology and advancements. I am passionate about developing all sorts of softwares and information systems. I have naturally developed a strong sense of UI and UX for every single one of my projects. I am continuously expanding my knowledge and tech stacks, by self learning productivity. But I feel like there's so much more for me to learn by being in the corporate sector, so I am looking for opportunities in software houses or tech companies that I can bring value to and I get to have hands on experience of what I am missing. I am very detail oriented person, I focus way to much on each element so that all together they look and work amazing. That's kind of all you can know me formally. Go ahead and Enjoy my entire website! 
+              Hey! I’m Maryam, a 23-year-old IT graduate who’s passionate about technology and creating cool stuff. I love building software, designing user-friendly apps, and solving problems with code. I’m always learning new things and exploring different tech tools to improve my skills. I’m looking for opportunities to work in a tech company where I can grow, contribute, and gain hands-on experience. I’m a detail-oriented person, and I believe that even the smallest details can make a big difference in creating something amazing.
+              That's kind of all you can know me formally. Go ahead and Enjoy my entire website! 
 
-            <br />
+            <br />  
             <div class="code-block" id="typing-container">
               <div id="caret-container" class="caret"></div>
 
@@ -144,9 +145,7 @@
         <h2 class="section-title text-center">My Projects</h2>
         
         <p class="text-justify">
-          My Projects include my semester projects, assignments, tasks, and self-learning fun projects to explore different tech stacks. I have created multiple websites, mobile apps, and AI/ML models and I continue to do so as a hobby and passion, not because it is my job. Feel free to view and appreciate my development skills; if you visit GitHub repositories, please do star them. Thank you!
-        </p>
-    
+          My projects include semester assignments, tasks, and fun self-learning experiments where I explore different tech stacks. I’ve built websites, mobile apps, and AI/ML and Computer Vision models not just for work, but because I genuinely enjoy it as a hobby and passion. Feel free to check out my work and see what I’ve created! If you visit my GitHub repositories, I’d love it if you could leave a star. Thanks for stopping by! 
         <div class="card mb-4">
           <div class="card-body">
             <h3 class="section-title">Computer Vision project</h3>
