--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div class="card-body">
             <h3 class="section-title">Computer Vision project</h3>
             <p class="text-justify">
-              I am contributing to a computer vision project focused on monitoring driver activities to enhance safety and compliance. The system includes features such as seatbelt detection, cell phone usage monitoring, drowsiness detection, yawning recognition, distraction identification, smoking detection, obstructed camera detection, and facial recognition. This project is part of my remote work for a US-based company. Due to confidentiality agreements, I am unable to disclose further details. </span>
+              I am contributing to a computer vision project focused on monitoring driver activities to enhance safety and compliance. The system includes features such as seatbelt detection, cell phone usage monitoring, drowsiness detection, yawning recognition, distraction identification, smoking detection, obstructed camera detection, and facial recognition.  </span>
             </p>
               
             <br>
