--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="col-md-6 d-flex justify-content-center">
                     <div class="box text-center">
                         <div class="pic">
-                            <img src="images/Maryam.png" alt="Maryam" />
+                            <img src="images/maryamimg.jpg" alt="Maryam" />
                             <h2>Maryam Ashfaq <br /><span>Full Stack Developer</span></h2>
 
                         </div>
