--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                         I played a key role in building and enhancing a full-featured donation and event management
                         platform tailored for non-profit organizations. This web application supports various donation
                         types, e-commerce functionalities, volunteer coordination, and initiative-specific pages, all
-                        accessible via a custom-built admin and user dashboard.
+                        accessible via a custom-built admin and user dashboard.[PART OF TEAMWORK]
                         <span class="read-more">Read More...</span>
                         <span class="hidden-content">
                             My primary contribution focused on the integration of PayPal for all donation flows,
@@ -447,7 +447,7 @@
                         Developed a modern media agency website for InFocus Media, converting Figma designs into a
                         dynamic Next.js application. Built with Next.js, React, and GSAP for professional animations and
                         smooth transitions. Features include pixel-perfect design implementation, engaging
-                        scroll-triggered animations, server-side rendering for SEO optimization, and responsive design.
+                        scroll-triggered animations, server-side rendering for SEO optimization, and responsive design.[PART OF TEAMWORK]
                         <span class="read-more">Read More...</span>
                         <span class="hidden-content">
                             The website features a visually appealing design with smooth animations, interactive
@@ -515,7 +515,7 @@
                     <p class="project-description">
                         Developed a full-featured e-commerce platform for Crave Crafted, built with React JSX and
                         integrated Stripe subscriptions. Features include dynamic blog management, customer review
-                        system, banner management, product catalog with admin controls, and appealing UI/UX design.
+                        system, banner management, product catalog with admin controls, and appealing UI/UX design.[PART OF TEAMWORK]
                         <span class="read-more">Read More...</span>
                         <span class="hidden-content">
                             The platform allows users to browse and purchase a wide range of food and snack products,
