--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                 <div class="col-md-8 text-center">
                     <h1 class="section-title text-center">My CV</h1>
                     <p>Download my CV and learn more about my experience.</p>
-                    <div class="btn"> <a href="CV/CV_NEW.pdf" download>Download Pdf</a></div>
+                    <div class="btn"> <a href="CV/londoncv.pdf" download>Download Pdf</a></div>
                 </div>
-            </div>
+            </div> 
 
             <div class="row justify-content-center">
                 <div class="col-md-6 d-flex justify-content-center">
